2006-10-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Mitz.

        Fix crashes on Qt/Linux. Offer a default EditorClient and pass it down to Frame ctor.

        * CMakeLists.txt:
        * platform/qt/EditorClientQt.cpp: Added.
        (WebCore::EditorClientQt::shouldDeleteRange):
        * platform/qt/EditorClientQt.h: Added.
        (WebCore::EditorClientQt::~EditorClientQt):
        * platform/qt/FrameQt.cpp:
        (WebCore::FrameQt::FrameQt):
        * platform/qt/FrameQt.h:

2006-10-21  Sam Weinig  <sam.weinig@gmail.com>

        Reviewed by Tim H.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11372
        Auto-generate a few more Objective-C DOM methods.

        - Auto-generate getMatchedCSSRules and getComputedStyle methods.

        * bindings/objc/DOMCSS.h:
        * bindings/objc/DOMCSS.mm:
        * bindings/objc/DOMExtensions.h:
        * bindings/objc/PublicDOMInterfaces.h:
        * bindings/scripts/CodeGeneratorObjC.pm:
        * dom/Document.idl:
        * page/DOMWindow.idl:

2006-10-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by aliu, landed by aliu.

        Fix Qt/Linux build.

        * CMakeLists.txt:
        * platform/qt/FrameQt.cpp:
        (WebCore::FrameQt::FrameQt):
        * platform/qt/SoundQt.cpp: Added.
        (WebCore::systemBeep):

2006-10-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Mitz, landed by ap.

        Fix obscure crashes in RenderTableSection on Rob's musicdb file.
        The problem was a missing layout() call on the frame view.
        Thanks go to Mitz Pettel for the initial hint!

        * platform/qt/ScrollViewCanvasQt.cpp:
        (WebCore::ScrollViewCanvasQt::paintEvent):

2006-10-20  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Anders.

        Send User-Agent on requests.
        Send custom request headers properly.

        * platform/cf/ResourceLoaderCFNet.cpp: